# learning-mcp

./: README.md  pyproject.toml
app/: agent_robot.py  client.py  helpers.py  server.py
app/proto/: blinky.proto  control.proto  sensor.proto
proto_gen/: blinky_pb2.py  blinky_pb2_grpc.py  control_pb2.py  control_pb2_grpc.py  sensor_pb2.py  sensor_pb2.pyi  sensor_pb2_grpc.py
src/: client.py
