[project]
name = "learning-mcp"
version = "0.1.0"
description = "Learning MCP"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles==24.1.0",
    "black==25.1.0",
    "dotenv==0.9.9",
    "fastmcp==2.14.0",
    "grpcio-tools==1.73.1",
    "langchain-google-genai==4.0.0",
    "langchain-ollama==1.0.1",
    "langchain-openai==1.1.3",
    "mcp>=1.24.0",
    "mcp-use==1.5.0",
]

[tool.black]
target-version = ['py37']
line-length = 100
exclude = "proto_gen/"
